less/ku-privacypolicy.less
// KU cookie accept box1

.ccc {
  position: fixed;
  bottom: 0;
  right: 0;
  left: 0;
  padding: 0;
  z-index: (@zindex-modal + 1);
  transform: translateZ(0); // Prevent jumping on Android
  color: @white-color;
  background-color: rgba(@ku-cookiebox-bg, .96);
  overflow-y: scroll;
  max-height: 100%;
  -webkit-overflow-scrolling: touch;

  a {
    color: @white-color;
  }
}

.ccc-popup {
  height: 100%;
  padding-bottom: @grid-gutter-height;
  @media all and (min-width: @screen-sm-min) {
    padding: @grid-gutter-by-half floor((@grid-gutter-width * 2)) floor((@grid-gutter-width * 2)) floor((@grid-gutter-width * 2));
  }
}

#ccc-title {
  font-size: 26px;
  line-height: 1.3;
  margin-top: @grid-gutter-by-half;
}

#ccc-desc {
  font-size: 16px;
  @media all and (min-width: @screen-sm-min) {
    letter-spacing: 0.7px;
  }
}

.ccc-list {
  list-style: none;
  padding: 0;
  position: relative;
  margin-bottom: @grid-gutter-height;
}

.ccc-list > li {
  border: 1px solid @gray-888;
  padding: 10px;
  border-radius: @border-radius-base;
}

.ccc-list > li + li {
  margin-top: @grid-gutter-height;
}

.ccc-select-title {
  font-size: 20px;
  margin-top: 0;
}

.ccc-select {
  font-size: 14px;
  letter-spacing: 0.7px;
  position: relative;
  padding-right: @grid-gutter-width;
  padding-bottom: @grid-gutter-height;
  cursor: pointer;
  .glyphicon-menu-down;

  &:before {
    .glyphicon;
    position: absolute;
    top: auto;
    right: 0;
    bottom: 0;
    font-size: 26px;
    color: @semi-white;
  }

  &:active,
  &:focus-within {
    .tab-focus-v2();
  }

  &.open {
    &:before {
      content: "\e260";
    }
  }
}

.ccc-list-actions {
  display: flex;
  flex-direction: row;
}

.customcheck {
  display: block;
  position: relative;
  padding-left: 30px!important;
  margin: 4px 4px 12px 0;
  cursor: pointer;
  font-size: 22px;
  user-select: none;
  cursor: default!important;

  input {
    position: absolute;
    opacity: 0;
    cursor: pointer;

    &:checked ~ .checkmark {
      background-color: #005cc8;
      border-radius: @border-radius-base;
      border: 1px solid @gray-999;
    }

    &:checked ~ .checkmark {
      &::after {
        display: block;
      }
    }
  }
  // &:hover {
  //   input ~ .checkmark {
  //     background-color: @gray-ddd;
  //   }
  // }
  .checkmark {
    &::after {
      left: 7px;
      top: 4px;
      width: 5px;
      height: 10px;
      border: solid @white-color;
      border-width: 0 3px 3px 0;
      transform: rotate(45deg);
    }
  }
}

.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 20px;
  width: 20px;
  background-color: @gray-ddd;
  border: 1px solid @gray-666;
  border-radius: @border-radius-base;

  &::after {
    content: "";
    position: absolute;
    display: none;
  }
}

.ccc-table-wrapper {
  display: none;
  height: 150px;
  overflow-y: scroll;
  overflow-x: auto;
  background-color: @white-color;
}

.ccc-table {
  table-layout: fixed;
  color: @text-color;
  background-color: @white-color;
}

.btn-lg {
  font-weight: 700;
}
@media (max-width: @screen-xs-max) {
  .ccc-buttons button {
    font-size: 14px;
    padding: 10px;
  }
}

.ccc-buttons button {
  &:first-child {
    margin-right: @grid-gutter-by-half;
    @media all and (min-width: @screen-sm-min) {
      margin-left: floor((@grid-gutter-width * 2));
    }
  }
}

.cookiefilter {
  position: relative;
  min-height: 150px;
  background-color: @well-bg;
  border: 1px solid @well-border;
  padding: 15px;
  margin-bottom: @grid-gutter-by-half;
  border-radius: @border-radius-base;
  .icon-exclamation;

  &::before {
    .icon;
    position: absolute;
    font-size: 156px;
    opacity: 0.075;
    top: 5px;
    right: 0;
  }
}

.cookiefilter-header {
  font-size: 18px;
  font-weight: 600;
}
// KU privacy policy box
@media (min-width: @screen-xs-max) {
  .privacy-policy {
    position: fixed;
    bottom: 0;
    right: 0;
    left: 0;
    z-index: 1020!important;
    height: auto;
    padding: 40px;
    color: @white-color;
    font-weight: 600;
    background: @ku-cookiebox-bg;

    .h2 {
      font-weight: 700;
      margin-top: 0;
    }

    p {
      margin: 0 0 2px;
    }

    .btn {
      #gradient.vertical(@gray-lighter; darken(@gray-lighter, 12%); 0%; 100%);
      color: @ku-red;
      padding: 6px 23px;
      font-size: 1.3em;
      font-weight: bold;
      text-transform: uppercase;
    }

    .laes_mere_cookies {
      color: @white-color;
      text-decoration: underline;
      display: inline-block;
      margin-top: 16px;

      &:before {
        content: "\00bb";
        color: inherit;
        display: inline-block;
        font-size: 1.4em;
        margin-right: 5px;
        top: 1px;
        position: relative;
      }
    }
  }
}
@media (max-width: @screen-xs-max) {
  .privacy-policy {
    display: none;
  }
}

